// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GroupFormService createGroup$ should create group 1`] = `
Object {
  "data": Object {
    "address": Object {
      "address": "Ág u. 1.",
      "city": "Budapest",
      "country": "Magyarország",
      "location": Object {
        "lat": 0,
        "lng": null,
        "lon": 0,
      },
      "postalCode": "1021",
      "title": "HQ",
    },
    "chainId": "test_chain_1_id",
    "createdAt": Any<String>,
    "currency": "EUR",
    "description": Object {
      "de": null,
      "en": "Test group #test_group_1_id description",
      "hu": "Teszt group #test_group_1_id leírás",
    },
    "email": "testuser+groupadmin@anyupp.com",
    "id": "test_ADMIN_GROUP_IT_GROUP_ID_01",
    "name": "Monád csoport S",
    "phone": "36701234123",
    "updatedAt": Any<String>,
  },
  "type": "insert",
}
`;

exports[`GroupFormService createGroupFormGroup should create form group 1`] = `
Object {
  "address": Object {
    "address": "",
    "city": "",
    "country": "",
    "location": Object {
      "lat": 0,
      "lng": 0,
    },
    "postalCode": "",
    "title": "",
  },
  "chainId": "",
  "currency": "",
  "description": Object {
    "de": "",
    "en": "",
    "hu": "",
  },
  "email": "",
  "name": "",
  "phone": "",
}
`;

exports[`GroupFormService updateGroup$ should update group 1`] = `
Object {
  "data": Object {
    "address": Object {
      "address": "Ág u. 1.",
      "city": "Budapest",
      "country": "Magyarország",
      "location": Object {
        "lat": 0,
        "lng": null,
        "lon": 0,
      },
      "postalCode": "1021",
      "title": "HQ",
    },
    "chainId": "test_chain_1_id",
    "createdAt": Any<String>,
    "currency": "EUR",
    "description": Object {
      "de": null,
      "en": "Test group #test_group_1_id description",
      "hu": "Teszt group #test_group_1_id leírás",
    },
    "email": "testuser+groupadmin@anyupp.com",
    "id": "test_ADMIN_GROUP_IT_GROUP_ID_01",
    "name": "MODIFIED NAME",
    "phone": "MODIFIED PHONE",
    "updatedAt": Any<String>,
  },
  "type": "update",
}
`;
